--- a/style.css
+++ b/style.css
@@ -54,6 +54,26 @@ body{
     color: #ffffff;
 }
 
+#btnPadrao{
+    background: #F6F6FB;
+    border: 1px solid #C4C4C4;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 12px;
+    margin: 10px;
+    width: 109px;
+    height: 31px;
+    outline: 0;
+    padding-left: 5px;
+    color: #5A6ACF;
+    margin-left: 5%;
+}
+
+#btnPadrao:hover{
+    background: #5A67BA;
+    color: #ffffff;
+}
+
 /*======================*/
 header{
     display: flex;
@@ -183,10 +203,83 @@ header{
     padding: 5px;
 }
 
+.tTitulos{
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
+
+.buscar{
+    background: #F6F6FB;
+    border: 1px solid #C4C4C4;
+    border-radius: 5px;
+    max-width: 500px;
+    height: 31px;
+    padding: 0;
+    margin: auto;
+    margin-right: 10px;
+    margin-top: -43px;
+}
+
+.buscar input{
+    width: 88%;
+    height: 20px;
+    font-weight: 400;
+    font-size: 12px;
+    padding-left: 5px;
+    background: #ffffff00;
+    border: 1px solid #1f384c00;
+    outline: 0;
+}
+
+#btnBusca{
+    background: #5A67BA;
+    border: 1px solid #5A67BA;
+    border-radius: 5px;
+    width: 40px;
+    height: 31px;
+    right: -10px;
+    position: relative;
+}
+
+/*============================*/
+
 @media(max-width: 600px){
     .areaSenha{
         width: auto;
         margin: 20px;
         margin-top: 40%;
+    }
+
+    .buscar{
+        background: #F6F6FB;
+        border: 1px solid #C4C4C4;
+        border-radius: 5px;
+        width: 280px;
+        margin: 20px;
+        height: 31px;
+        padding: 0;
+        margin: auto;
+    }
+
+    .buscar input{
+        width: auto;
+        height: 20px;
+        font-weight: 400;
+        font-size: 12px;
+        padding-left: 5px;
+        background: #ffffff00;
+        border: 1px solid #1f384c00;
+        outline: 0;
+    }
+
+    #btnBusca{
+        background: #5A67BA;
+        border: 1px solid #5A67BA;
+        border-radius: 5px;
+        width: 40px;
+        height: 31px;
+        right: -83px;
+        position: relative;
     }
 }
