--- a/style.css
+++ b/style.css
@@ -128,6 +128,23 @@ header{
     cursor: context-menu;
 }
 
+.questoes{
+    display: none;
+    background: #707FDD;
+    border-radius: 5px;
+    color: black;
+    margin: 5px;
+    padding-bottom: 15px;
+}
+
+.questoes a{
+    color: black;
+}
+
+.questoes a:hover{
+    color: #ffffff;
+}
+
 /*=========================*/
 #opcsMenu.active{
     display: block;
