--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body{
     font-weight: 600;
     font-size: 12px;
     margin: 10px;
-    width: 109px;
+    width: 150px;
     height: 31px;
     outline: 0;
     padding-left: 5px;
@@ -187,10 +187,12 @@ header{
     display: none;
     position: absolute;
     background: #ffffff;
+    width: 140px;
     top: 57px;
-    right: 10px;
+    right: 12px;
     border: 1px solid #27324022;
     border-radius: 4px;
+    z-index: 1000;
     
 }
 
@@ -198,7 +200,7 @@ header{
     text-decoration: none;
     color: #273240;
     font-weight: 600;
-    font-size: 13px;
+    font-size: 15px;
     margin: 5px;
 }
 
